<resources>
    <string name="app_name">MyRoom</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="textSize">24</string>
    <string name="location">Location</string>
    <string name="recomended">Recomended</string>
    <string name="more">More</string>
    <string name="contact_us">Contact Us</string>
    <string name="editprfile">Edit Profile</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rs">\u20A8</string>
    <string name="price">Rent : \u20B9</string>
    <string name="price_Samle">\u20B9</string>
    <string name="acount_info">Account Info</string>
    <string name="profile">Profile</string>
    <string name="contactus">Contact Us</string>
    <string name="aplied_filter">Apply Filter</string>
    <string name="details">Details</string>
    <string name="all_near_by_room">Nearby Rooms</string>
    <string name="nearby">Near By Your Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_save_post">Save_Post_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="placeholderKey" translatable="false">AIzaSyD8HnhMQpIt9ZGaPnkexNlGomWHOYerTVc</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD8HnhMQpIt9ZGaPnkexNlGomWHOYerTVc</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="state">State</string>
    <string name="full_address">Full Address</string>
    <string name="route_details">Route details</string>
    <string name="room_location">Room Location</string>
    <string name="apply_filter">Apply filter</string>
    <string name="save_address">Save Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="my_account">My Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="present_address">Present Address</string>
    <string name="feedback">Feedback</string>
    <string name="current_address">Current Address</string>
    <string name="edit_room">Edit Room</string>
    <string name="search">Search</string>
    <string name="Description">Description</string>
    <string name="time_ago_seconds">Second ago</string>
    <string name="time_ago_minute">Minute ago</string>
    <string name="time_ago_minutes">Minutes ago</string>
    <string name="time_ago_hour">Hour ago</string>
    <string name="time_ago_hours">Hours ago</string>
    <string name="time_ago_day">Day ago</string>
    <string name="time_ago_days">Days ago</string>
    <string name="time_ago_month">Month ago</string>
    <string name="time_ago_months">Months ago</string>
    <string name="time_ago_year">Year ago</string>
    <string name="time_ago_years">Years ago</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="user_name">User Name</string>
    <string name="open_settings">Open Settings</string>
    <string name="ok">Ok</string>

</resources>